--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,27 @@
 }
 
 
+/* .header {
+  font-family: 'Orbitron', sans-serif;
 
+  height: 40px;
+    width: 1000px;
+
+    text-align: center;
+    align-items: center;
+
+    display:flex;
+
+    background-color: #b4b4b4;
+    margin-left: auto;
+    margin-right: auto;
+
+    margin-bottom: 0.5em;
+    font-size: 2em;
+    font-weight: bold;
+    align-content: center;
+    
+} */
 
 .continer {
   width: 970px;
